src/App.css
main {
  display: flex;
  flex-direction: column;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
}

header img {
  width: 40px;
  height: 40px;
}

header button {
  background: transparent;
  border: none;
  position: relative;
}

header span {
  border-radius: 50%;
  padding: 0.5px 5px;
  position: absolute;
  top: 0;
  right: 0;
  color: white;
  background-color: black;
}

button {
  cursor: pointer;
}

.search {
  margin: auto;
}

label {
  margin-right: 0.5rem;
}

.search input {
  padding: 0.25rem;
  margin-bottom: 20px;
}

.itemsContainer {
  display: flex;
  flex-direction: column;
  max-width: 85vw;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 45px;
}

.item {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  border: 1px solid black;
  width: 100%;
  height: 100%;
  padding: 0.5rem;
}

.itemImage {
  display: flex;
  height: 45%;
}

.item img {
  align-self: center;
  max-width: 100px;
  height: auto;
  margin: 0 auto;
}

.item h3 {
  text-align: center;
}

.truncate {
  display: -webkit-box;
  max-width: 100%;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.item button {
  margin-bottom: 25px;
}

.display {
  padding: 0.5rem 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-align: left;
}

.display img {
  max-width: 30px;
  max-height: 30px;
}

.display > div {
  flex: 1 1 25%;
}
.display p {
  flex: 2 1 50%;
}
.display span {
  flex: 2 1 25%;
}

.cartContainer {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgb(0, 0, 0, 0.5);
  width: 100vw;
  height: 100vh;
  z-index: 2;
  display: flex;
  overflow: hidden;
}

.cartDisplay {
  background-color: white;
  width: 80vw;
  height: 80vh;
  margin: auto;
  padding: 1.5rem;
  border: 1px solid black;
  z-index: 3;
  position: relative;
}

.cartDisplay section {
  overflow: scroll;
  height: 67%;
}

.close {
  position: absolute;
  top: 0;
  right: 0;
  margin: 0.5rem 1rem;
}

.email {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.orders {
  height: 17%;
  margin-top: 0.5rem;
  display: flex;
  overflow: scroll;
}

.orders div {
  border: 1px solid black;
  padding: 0.25rem;
  margin-inline: 0.25rem;
}

@media screen and (min-width: 641px) {
  .itemsContainer {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    column-gap: 2rem;
    max-width: 90vw;
  }

  .display {
    flex-direction: row;
  }

  .email {
    flex-direction: row;
  }
}

@media screen and (min-width: 1024px) {
  .itemsContainer {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
}

.loader {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100vw;
  height: 100vh;
  z-index: 2;
  display: flex;
  overflow: hidden;
}

.loaderDisplay {
  background-color: white;
  opacity: 0.5;
  width: 100vw;
  height: 100vh;
  margin: auto;
  padding: 1.5rem;
  z-index: 3;
  position: relative;
}

.loaderImage {
  background-color: white;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.submitButton,
.error {
  margin-left: 10px;
}

.error {
  color: #b85050;
}

